# segment-logging

./: .gitignore  CMakeLists.txt  README.md
include/slog/: dev.h  format.h  index.h  level.h  message.h  source_point.h
sample/: basic.cc  basic.cli
src/: format.cc  formatter.cc  index.cc  message.cc  source_point.cc
src/devices/: common.cc  console.cc
